# rel4-lab

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.codex/skills/microkernel-no-domain/: SKILL.md
docs/: loongarch64-sel4tests.md
docs/milestones/: README.md  fpu-sel4-alignment.md  sel4.md  xv6.md
kernel/: Cargo.toml  build.rs  linker-loongarch64.ld  linker-riscv64.ld  linker-x86_64.ld  linker.ld
kernel/src/: logger.rs  main.rs  print.rs  xv6_compat.rs
kernel/src/abi/: fault.rs  (+5 more)
tools/: audit-fpu-lifecycle.py  audit-kernel-elf.py  audit-kernel-fpu.py  audit-platform-abi.py  audit-smp-abi.py  audit-syscall-abi.py  audit-trap-layout.py  audit-user-context-abi.py  audit-vspace-abi.py  audit-xv6-host-elf-abi.py  build-xv6-fs-img.py  build-xv6-fs-img.sh  build-xv6-user-rootserver.py  build-xv6-user-rootserver.sh  check-loongarch-sel4tests.py  kernel_arch_paths.py  pack-image.py  pack-image.sh  run-tests.py  run-tests.sh  run-xv6-shell.py  run-xv6-user.py  run-xv6-user.sh  simulate.py  simulate.sh  target_config.py  tool_common.py  xv6-build-lock.py  xv6-build-lock.sh
userspace/sel4-user/: Cargo.toml  build.rs
userspace/uart-server/: Cargo.toml  build.rs  linker-loongarch64.ld  linker.ld
userspace/vfs-server/: Cargo.toml  build.rs
userspace/virtio-disk-server/: Cargo.toml  build.rs  linker-riscv64.ld
userspace/xv6-abi/: Cargo.toml
userspace/xv6-fs-server/: Cargo.toml  build.rs
userspace/xv6-host/: Cargo.toml  build.rs
userspace/xv6fs-server/: Cargo.toml  build.rs  linker-loongarch64.ld
(+162 files in other folders)
